--- a/src/main.ipynb
+++ b/src/main.ipynb
@@ -36,19 +36,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
     "from datetime import datetime\n",
     "\n",
     "start = datetime(2008, 1, 1)\n",
-    "end = datetime(2022, 5, 1)\n"
+    "end = datetime(2023, 1, 1)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -172,16 +172,16 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>2019-04-18 00:00:00</th>\n",
-       "      <td>26.358837</td>\n",
+       "      <td>26.358835</td>\n",
        "      <td>33.915295</td>\n",
-       "      <td>49.325840</td>\n",
-       "      <td>64.328300</td>\n",
+       "      <td>49.325844</td>\n",
+       "      <td>64.328308</td>\n",
        "      <td>3.760329</td>\n",
-       "      <td>69.277443</td>\n",
-       "      <td>44.319920</td>\n",
-       "      <td>41.089413</td>\n",
-       "      <td>4.561910</td>\n",
-       "      <td>42.011482</td>\n",
+       "      <td>69.277428</td>\n",
+       "      <td>44.319916</td>\n",
+       "      <td>41.089409</td>\n",
+       "      <td>4.561911</td>\n",
+       "      <td>42.011478</td>\n",
        "      <td>...</td>\n",
        "      <td>907700</td>\n",
        "      <td>13189000</td>\n",
@@ -196,16 +196,16 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2019-04-22 00:00:00</th>\n",
-       "      <td>27.822117</td>\n",
-       "      <td>33.037067</td>\n",
-       "      <td>49.487938</td>\n",
-       "      <td>64.809288</td>\n",
+       "      <td>27.822113</td>\n",
+       "      <td>33.037071</td>\n",
+       "      <td>49.487949</td>\n",
+       "      <td>64.809296</td>\n",
        "      <td>3.820701</td>\n",
        "      <td>69.830391</td>\n",
-       "      <td>43.993771</td>\n",
-       "      <td>41.053699</td>\n",
-       "      <td>4.492434</td>\n",
-       "      <td>41.858532</td>\n",
+       "      <td>43.993767</td>\n",
+       "      <td>41.053707</td>\n",
+       "      <td>4.492435</td>\n",
+       "      <td>41.858528</td>\n",
        "      <td>...</td>\n",
        "      <td>1207900</td>\n",
        "      <td>11950400</td>\n",
@@ -218,135 +218,51 @@
        "      <td>NaN</td>\n",
        "      <td>9949700.0</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2019-04-23 00:00:00</th>\n",
-       "      <td>28.207712</td>\n",
-       "      <td>33.520588</td>\n",
-       "      <td>50.201729</td>\n",
-       "      <td>65.232231</td>\n",
-       "      <td>3.881073</td>\n",
-       "      <td>71.320526</td>\n",
-       "      <td>44.310860</td>\n",
-       "      <td>41.035854</td>\n",
-       "      <td>4.577871</td>\n",
-       "      <td>41.896767</td>\n",
-       "      <td>...</td>\n",
-       "      <td>589300</td>\n",
-       "      <td>23488700</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>5431600</td>\n",
-       "      <td>5050800</td>\n",
-       "      <td>1896600</td>\n",
-       "      <td>11558800</td>\n",
-       "      <td>10595100</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>6786500.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2019-04-24 00:00:00</th>\n",
-       "      <td>27.802343</td>\n",
-       "      <td>33.540321</td>\n",
-       "      <td>50.124306</td>\n",
-       "      <td>65.240532</td>\n",
-       "      <td>3.837950</td>\n",
-       "      <td>71.929695</td>\n",
-       "      <td>44.292740</td>\n",
-       "      <td>40.821663</td>\n",
-       "      <td>4.621059</td>\n",
-       "      <td>42.498978</td>\n",
-       "      <td>...</td>\n",
-       "      <td>2645000</td>\n",
-       "      <td>13227100</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>4326300</td>\n",
-       "      <td>4697800</td>\n",
-       "      <td>2977800</td>\n",
-       "      <td>8454700</td>\n",
-       "      <td>11684000</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>4973500.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2019-04-25 00:00:00</th>\n",
-       "      <td>26.803751</td>\n",
-       "      <td>32.967991</td>\n",
-       "      <td>49.669418</td>\n",
-       "      <td>65.796135</td>\n",
-       "      <td>3.984568</td>\n",
-       "      <td>73.204285</td>\n",
-       "      <td>44.555462</td>\n",
-       "      <td>40.330803</td>\n",
-       "      <td>4.618241</td>\n",
-       "      <td>42.489418</td>\n",
-       "      <td>...</td>\n",
-       "      <td>3693400</td>\n",
-       "      <td>17425500</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>4900200</td>\n",
-       "      <td>3961100</td>\n",
-       "      <td>1230200</td>\n",
-       "      <td>9934000</td>\n",
-       "      <td>11135000</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>3863300.0</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 400 columns</p>\n",
+       "<p>2 rows × 400 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
        "                     adj_close                                             \\\n",
        "                            AA        AAL       AAPL       ABBV      ABEV   \n",
        "Date                                                                        \n",
-       "2019-04-18 00:00:00  26.358837  33.915295  49.325840  64.328300  3.760329   \n",
-       "2019-04-22 00:00:00  27.822117  33.037067  49.487938  64.809288  3.820701   \n",
-       "2019-04-23 00:00:00  28.207712  33.520588  50.201729  65.232231  3.881073   \n",
-       "2019-04-24 00:00:00  27.802343  33.540321  50.124306  65.240532  3.837950   \n",
-       "2019-04-25 00:00:00  26.803751  32.967991  49.669418  65.796135  3.984568   \n",
+       "2019-04-18 00:00:00  26.358835  33.915295  49.325844  64.328308  3.760329   \n",
+       "2019-04-22 00:00:00  27.822113  33.037071  49.487949  64.809296  3.820701   \n",
        "\n",
        "                                                                           \\\n",
        "                           ABT        AFL        AIG       AIV       AMAT   \n",
        "Date                                                                        \n",
-       "2019-04-18 00:00:00  69.277443  44.319920  41.089413  4.561910  42.011482   \n",
-       "2019-04-22 00:00:00  69.830391  43.993771  41.053699  4.492434  41.858532   \n",
-       "2019-04-23 00:00:00  71.320526  44.310860  41.035854  4.577871  41.896767   \n",
-       "2019-04-24 00:00:00  71.929695  44.292740  40.821663  4.621059  42.498978   \n",
-       "2019-04-25 00:00:00  73.204285  44.555462  40.330803  4.618241  42.489418   \n",
+       "2019-04-18 00:00:00  69.277428  44.319916  41.089409  4.561911  42.011478   \n",
+       "2019-04-22 00:00:00  69.830391  43.993767  41.053707  4.492435  41.858528   \n",
        "\n",
        "                     ...   volume                                           \\\n",
        "                     ...     VXRT        VZ WLL      WMB      WMT      WPM   \n",
        "Date                 ...                                                     \n",
        "2019-04-18 00:00:00  ...   907700  13189000 NaN  6097400  3727800  3175300   \n",
        "2019-04-22 00:00:00  ...  1207900  11950400 NaN  4138800  5079400  1466600   \n",
-       "2019-04-23 00:00:00  ...   589300  23488700 NaN  5431600  5050800  1896600   \n",
-       "2019-04-24 00:00:00  ...  2645000  13227100 NaN  4326300  4697800  2977800   \n",
-       "2019-04-25 00:00:00  ...  3693400  17425500 NaN  4900200  3961100  1230200   \n",
        "\n",
        "                                                          \n",
        "                            X       XOM XSPA          ZM  \n",
        "Date                                                      \n",
        "2019-04-18 00:00:00  11889100   9493900  NaN  25764700.0  \n",
        "2019-04-22 00:00:00  10015800  10770600  NaN   9949700.0  \n",
-       "2019-04-23 00:00:00  11558800  10595100  NaN   6786500.0  \n",
-       "2019-04-24 00:00:00   8454700  11684000  NaN   4973500.0  \n",
-       "2019-04-25 00:00:00   9934000  11135000  NaN   3863300.0  \n",
        "\n",
-       "[5 rows x 400 columns]"
+       "[2 rows x 400 columns]"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "voluminous_stocks_yf.head()"
+    "voluminous_stocks_yf.head(2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -354,10 +270,10 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "Index: 3609 entries, 2019-04-18 00:00:00 to 2019-04-17 00:00:00\n",
+      "Index: 3778 entries, 2019-04-18 00:00:00 to 2019-04-17 00:00:00\n",
       "Columns: 400 entries, ('adj_close', 'AA') to ('volume', 'ZM')\n",
       "dtypes: float64(227), int64(173)\n",
-      "memory usage: 11.0+ MB\n"
+      "memory usage: 11.6+ MB\n"
      ]
     }
    ],
