--- a/src/Momentum.ipynb
+++ b/src/Momentum.ipynb
@@ -1784,7 +1784,7 @@
     "        pqr.metrics.mean_return,\n",
     "        statistics=True,\n",
     "        annualizer=12,\n",
-    "    ),\n",
+    "    ), # type: ignore\n",
     "    multiplier=100,\n",
     "    name=\"Monthly Mean Return, %\",\n",
     ")"
@@ -1822,7 +1822,7 @@
     "    pqr.utils.partial(\n",
     "        pqr.metrics.volatility,\n",
     "        annualizer=12,\n",
-    "    ),\n",
+    "    ), # type: ignore\n",
     "    multiplier=100,\n",
     "    name=\"Monthly Volatility, %\",\n",
     ")"
@@ -1841,7 +1841,7 @@
     "        statistics=True,\n",
     "        benchmark=ew_benchmark,\n",
     "        annualizer=12,\n",
-    "    ),\n",
+    "    ), # type: ignore\n",
     "    multiplier=100,\n",
     "    name=\"Alpha, %\",\n",
     ")"
